[CHG]修复Days的英文翻译

--- a/resource/l10n/en-US.toml
+++ b/resource/l10n/en-US.toml
@@ -746,7 +746,7 @@ other = "Price"
 other = "Expired"
 
 [Days]
-other = "d"
+other = "Days"
 
 [CustomNameservers]
 other = "Custom Public DNS Nameservers for DDNS (separate with comma)"
